--- a/spring-boot-hello-world-example/pom.xml
+++ b/spring-boot-hello-world-example/pom.xml
@@ -13,7 +13,7 @@
 	<version>1</version>
 	<name>SpringBootHelloWorldExampleApplication</name>
 	<description>Demo project for Spring Boot</description>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<properties>
 		<java.version>1.8</java.version>
 	</properties>
@@ -54,6 +54,10 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
 			<plugin>
 		
 
