--- a/.github/workflows/docker-pull.yml
+++ b/.github/workflows/docker-pull.yml
@@ -10,15 +10,6 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v2
 
-      - name: Log in to Docker Hub (if image is private)
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-      - name: Pull Docker Image from Docker Hub
-        run: docker pull nasanbuyan/rms:app
-
       - name: SSH and Deploy Docker Container to Azure VM
         uses: appleboy/ssh-action@master
         with:
@@ -26,6 +17,15 @@ jobs:
           username: azureuser
           key: ${{ secrets.AZURE_VM_SSH_KEY }}
           script: |
+            # Log in to Docker Hub if the image is private
+            echo "Logging in to Docker Hub..."
+            echo ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }} | docker login --username ${{ secrets.DOCKER_HUB_USERNAME }} --password-stdin
+
+            # Pull the Docker image
+            echo "Pulling the Docker image..."
+            docker pull nasanbuyan/rms:app
+
+            # Stop and remove the existing container if it's already running
             if [ $(docker ps -q -f name=my-container) ]; then
               echo "Container my-container exists, stopping and removing it..."
               docker stop my-container
@@ -33,5 +33,7 @@ jobs:
             else
               echo "Container my-container does not exist, no action needed."
             fi
+
+            # Run the new container
             echo "Running new container..."
             docker run --name my-container -d -p 80:80 nasanbuyan/rms:app
