--- a/spring-boot-hello-world-example/docker-compose.yml
+++ b/spring-boot-hello-world-example/docker-compose.yml
@@ -1,28 +1,22 @@
-version: '3'
-
+version: '3.8'
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    ports:
-      - "8080:8080"
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:mysql://db:3306/mydb
-      - SPRING_DATASOURCE_USERNAME=root
-      - SPRING_DATASOURCE_PASSWORD=secret
-    depends_on:
-      - db
-
   db:
     image: mysql:5.7
     environment:
-      - MYSQL_DATABASE=mydb
-      - MYSQL_ROOT_PASSWORD=secret
+      MYSQL_DATABASE: 'rms'
+      MYSQL_USER: 'rms'
+      MYSQL_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'toor'
     ports:
       - "3306:3306"
-    volumes:
-      - db-data:/var/lib/mysql
 
-volumes:
-  db-data:
+  app:
+    image: nasanbuyan/my-spring-boot-app:latest
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://db:3306/rms
+      SPRING_DATASOURCE_USERNAME: rms
+      SPRING_DATASOURCE_PASSWORD: password
+    ports:
+      - "8080:8080"
+    depends_on:
+      - db
