--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -22,7 +22,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile-app
+          file: ./spring-boot-hello-world-example/Dockerfile-app
           push: true
           tags: nasanbuyan/my-spring-boot-app:latest
 
@@ -43,7 +43,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile-db
+          file: ./spring-boot-hello-world-example/Dockerfile-db
           push: true
           tags: nasanbuyan/mysql:5.7
 
